# unkognito

./: .bumpversion.cfg  .gitmodules  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  VERSIONING.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  greetings.yml  node.yml  python.yml  release-controller.yml  stale.yml  version-controller.yml
backend/: .pylintrc  pyproject.toml  requirements.txt
backend/tests/: test_main.py
frontend/: .eslintrc.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.tsx  setupTests.ts
frontend/src/Routes/: PrivateRoute.tsx
frontend/src/__moks__/: axios.ts
frontend/src/api/: axiosClient.ts
frontend/src/components/: Dashboard.tsx  ErrorBoundary.tsx  Home.tsx  Login.tsx  Register.tsx  VerifyEmail.tsx
frontend/src/hooks/: useBackendHealth.ts
frontend/src/services/: authService.ts
